# Django

./: .env.sample  README.md  blog.json  groups.json  products.json  pyproject.toml  requirements.txt
catalog/: admin.py  forms.py  models.py  services.py  urls.py  views.py
catalog/management/commands/: fill.py
catalog/migrations/: 0001_initial.py  0002_alter_product_image.py  0002_product_manufactured_at.py  0003_blog.py  0004_alter_blog_slug.py  0005_alter_product_category_version.py  0006_alter_version_product_alter_version_version_number.py  0007_product_owner.py  0008_alter_product_options_product_is_published.py
catalog/templates/: contacts.html  home.html  index.html  products_detail.html  products_list.html
catalog/templates/catalog/: base.html  blog_base.html  blog_confirm_delete.html  blog_detail.html  blog_form.html  blog_list.html  category_list.html  contacts.html  product_confirm_delete.html  product_detail.html  product_form.html  product_list.html
catalog/templates/catalog/includes/: footer.html  inc_menu.html
catalog/templates/includes/: inc_menu.html
config/: settings.py  urls.py
users/: admin.py  models.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_user_token.py
users/templates/: login.html
users/templates/users/: password_reset_complete.html  password_reset_confirm.html  password_reset_form.html  user_form.html
